# short-video-two-tower-recommender

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: fully_observed_v1.yaml  phase0.yaml  phase1_selection_plan.yaml  phase_b1a_bpr_pilot.yaml  phase_b2a_two_tower_smoke.yaml  phase_b2b_full_two_tower.yaml  phase_b3b_final_recipe.yaml
contracts/: baselines_v1.yaml  candidate_catalog_v1.yaml  event_canonicalization_v1.yaml  fit_contexts_v1.yaml  fully_observed_audit_v1.yaml  fully_observed_audit_v2.yaml  metrics_v1.yaml  negative_sampling_v1.yaml  negative_sampling_v2.yaml  target_deduplication_v1.yaml  temporal_evaluation_v1.yaml  temporal_evaluation_v2.yaml  two_tower_cold_start_v1.yaml  two_tower_cold_start_v2.yaml
docs/: fully_observed_protocol_v1.md  legacy_protocol_v2.md
manifests/: phase_b3b_final_numeric_preprocessing.json  split_manifest.json
scripts/: audit_phase0.py  check_baseline_access.py  correct_phase1_segment_metrics.py  correct_phase1_segment_row.py  diagnose_phase_b3b_numeric_preprocessing.py  evaluate_temporal_final.py  final_evaluation.py  modal_phase_b2b_full_run.py  modal_phase_b2b_preflight.py  modal_phase_b3b0_final_refit.py  modal_phase_b3b_r2_artifact_preflight.py  modal_phase_b3b_r3_artifact_preflight.py  modal_phase_b3b_r3_numeric_diagnostic.py  modal_phase_b3b_sealed_small.py  modal_phase_b4a_faiss_benchmark.py  modal_preflight_helpers.py  precompute_phase_b2a_captions.py  precompute_phase_b3b_captions.py  run_phase1_baselines.py  run_phase_b1a_bpr_pilot.py  run_phase_b2a_two_tower_smoke.py  run_phase_b3a_hybrid.py  (+7 more)
(+111 files in other folders)
