[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "short-video-two-tower-recommender"
version = "0.0.1"
description = "Leakage-aware KuaiRec recommendation evaluation project"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.2.6",
  "pandas==2.3.3",
  "PyYAML==6.0.3",
  "scipy==1.16.3",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2"]
training = [
  "torch==2.11.0",
  "sentence-transformers==5.6.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
